@@ -23,6 +23,14 @@
     
     <build>
 		<plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-wrapper-plugin</artifactId>
+                <version>3.3.2</version>
+                <configuration>
+                    <mavenVersion>3.9.6</mavenVersion>
+                </configuration>
+            </plugin>
 <!--            <plugin>-->
 <!--                <groupId>org.openrewrite.maven</groupId>-->
 <!--                <artifactId>rewrite-maven-plugin</artifactId>-->
@@ -37,10 +45,6 @@
                     <target>25</target>
                     <enablePreview>true</enablePreview>
                     <useIncrementalCompilation>false</useIncrementalCompilation>
-                    <compilerArgs>
-                        <arg>--add-modules</arg>
-                        <arg>jdk.incubator.vector</arg>
-                    </compilerArgs>
                 </configuration>
             </plugin>
 
@@ -57,10 +61,14 @@
                 </dependencies>
                 <configuration>
                     <targetClasses>
-                        <param>com.example.*</param>
+                        <param>jcog.*</param>
+                        <param>narchy.*</param>
+                        <param>spacegraph.*</param>
                     </targetClasses>
                     <targetTests>
-                        <param>com.example.*Test</param>
+                        <param>jcog.*Test</param>
+                        <param>narchy.*Test</param>
+                        <param>spacegraph.*Test</param>
                     </targetTests>
                     <outputFormats>
                         <outputFormat>XML</outputFormat>
@@ -108,9 +116,9 @@
             <plugin>
                 <groupId>org.owasp</groupId>
                 <artifactId>dependency-check-maven</artifactId>
-                <version>7.1.1</version>
+                <version>12.1.3</version>
                 <configuration>
-                    <failBuildOnCVSS>0</failBuildOnCVSS>
+                    <failBuildOnCVSS>7.0</failBuildOnCVSS>
                 </configuration>
                 <executions>
                     <execution>
@@ -143,5 +151,58 @@
 
 		</plugins>
     </build>
+
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>3.3.1</version>
+                <configuration>
+                    <configLocation>checkstyle.xml</configLocation>
+                    <encoding>UTF-8</encoding>
+                    <consoleOutput>true</consoleOutput>
+                    <failsOnError>true</failsOnError>
+                    <linkXRef>false</linkXRef>
+                </configuration>
+                <reportSets>
+                    <reportSet>
+                        <reports>
+                            <report>checkstyle</report>
+                        </reports>
+                    </reportSet>
+                </reportSets>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-pmd-plugin</artifactId>
+                <version>3.24.0</version>
+                <configuration>
+                    <rulesets>
+                        <ruleset>pmd-ruleset.xml</ruleset>
+                    </rulesets>
+                    <failOnViolation>true</failOnViolation>
+                    <printFailingErrors>true</printFailingErrors>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.github.spotbugs</groupId>
+                <artifactId>spotbugs-maven-plugin</artifactId>
+                <version>4.8.6.2</version>
+            </plugin>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.12</version>
+                <reportSets>
+                    <reportSet>
+                        <reports>
+                            <report>report</report>
+                        </reports>
+                    </reportSet>
+                </reportSets>
+            </plugin>
+        </plugins>
+    </reporting>
 
 </project>
